--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "start:ios": "npm run ios -- --simulator='iPhone 16 Pro Max (6A18C026-ED41-4A14-9D5E-4BEA6BDE45E9)'"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/native": "^7.1.6",
+    "@react-navigation/stack": "^7.2.10",
     "react": "19.0.0",
     "react-native": "0.79.0",
+    "react-native-gesture-handler": "^2.25.0",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0"
   },
